--- a/css/style-purple.css
+++ b/css/style-purple.css
@@ -9,6 +9,9 @@
 //--//-->   STYLES GENERALES
 ======================================*/
 
+*{
+  font-family: 'Josefin Sans' sans-serif;
+}
 body {
   background-color: #f5f5f5;
   color: #4e4e4e;
