--- a/css/style-purple.css
+++ b/css/style-purple.css
@@ -10,7 +10,7 @@
 ======================================*/
 
 *{
-  font-family: 'Josefin Sans' sans-serif;
+  font-family: 'Josefin Sans', sans-serif;
 }
 body {
   background-color: #f5f5f5;
