--- a/css/style-purple.css
+++ b/css/style-purple.css
@@ -219,6 +219,7 @@ a:hover {
   border-radius: 50%;
   line-height: 1.4;
   margin: 0 15px 0 0;
+  padding: 4px;
   box-shadow: 0 0 0 3px #61118a;
   transition: all 500ms ease;
 }
